--- a/home/config/hyprland.conf
+++ b/home/config/hyprland.conf
@@ -3,7 +3,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=HDMI-A-2,1920x1080,0x0,1
+monitor=HDMI-A-2,1920x1080@75,0x0,1
 
 
 ###################
