--- a/home/config/hypr/hyprpaper.conf
+++ b/home/config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
 wallpaper {
     monitor = HDMI-A-2
-    path = ~/.config/hypr/wp.png
+    path = ~/.config/wp.png
     fit_mode = cover
 }
 splash = false
