--- a/.sops.yaml
+++ b/.sops.yaml
@@ -13,7 +13,7 @@ creation_rules:
     key_groups:
     - age:
       - *root-knx
-  - path_regex: secrets/(i3status|zipline|mail|nix\.conf)\.yaml$
+  - path_regex: secrets/(i3status|zipline|mail|nix\.conf|last\.fm)\.yaml$
     key_groups:
     - age:
       - *hm-knx
